refactoring Strings2 add in.txt Strings2 add in.csv Strings1

--- a/3. Strings/Strings2/Strings2.csproj
+++ b/3. Strings/Strings2/Strings2.csproj
@@ -51,5 +51,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="in.txt" />
+    <Content Include="out.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
