Collections2 rename NumLenConparator -> NumConparator

--- a/4. Collections/Collections2/Collections2.csproj
+++ b/4. Collections/Collections2/Collections2.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumLenComparator.cs" />
+    <Compile Include="NumComparator.cs" />
     <Compile Include="LenNum.cs" />
     <Compile Include="LenNumCollections.cs" />
     <Compile Include="Program.cs" />
