--- a/5. db/5. Database/Database.csproj
+++ b/5. db/5. Database/Database.csproj
@@ -39,13 +39,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ado.cs" />
+    <Compile Include="LenNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="db1.mdb" />
-    <Content Include="in.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
