ado fix after review

--- a/5. db/5. Database/Database.csproj
+++ b/5. db/5. Database/Database.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ado.cs" />
+    <Compile Include="DbException.cs" />
     <Compile Include="LenNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
