--- a/Restaurant/Restaurant/Web.config
+++ b/Restaurant/Restaurant/Web.config
@@ -7,11 +7,18 @@ http://www.mono-project.com/Config_system.web and
 http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
 -->
 <configuration>
+  <appSettings>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.6.2">
       <assemblies />
     </compilation>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.6" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/" timeout="2880"/>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
